--- a/Semester-3/20141123_hands_on/webstorm_project/css/layout.css
+++ b/Semester-3/20141123_hands_on/webstorm_project/css/layout.css
@@ -16,6 +16,8 @@
     border-bottom: 2px solid #000;
     background-position: center center;
     background-size: cover;
+    position: relative;
+    z-index: -9999;
 }
 
 .page-header-image img {
@@ -43,6 +45,36 @@
 
 .page-footer p {
     margin: 0;
+}
+
+a.print-link {
+    width: 32px;
+    height: 34px;
+    display: inline-block;
+    margin: 5px;
+    background-image: url(../images/print_spridesheet_small.png);
+}
+
+a.print-link:hover,
+a.print-link:focus
+a.print-link:active {
+    background-image: url(../images/print_spridesheet_small.png);
+    background-position: -32px -32px;
+}
+
+a.email-link {
+    width: 32px;
+    height: 34px;
+    display: inline-block;
+    margin: 5px;
+    background-image: url(../images/mail_spridesheet_small.png);
+}
+
+a.email-link:hover,
+a.email-link:focus
+a.email-link:active {
+    background-image: url(../images/mail_spridesheet_small.png);
+    background-position: -32px -32px;
 }
 
 /*
