--- a/Semester-3/20141123_hands_on/webstorm_project/css/layout.css
+++ b/Semester-3/20141123_hands_on/webstorm_project/css/layout.css
@@ -31,6 +31,18 @@
     padding: 10px;
 }
 
+.page-content article {
+    margin: 10px;
+    display: inline-block;
+}
+.page-content article img {
+    float: left;
+    width: 80px;
+    height: 80px;
+}
+
+
+
 .page-sidebar {
     padding: 10px;
     border-top: 1px solid #000;
@@ -47,10 +59,14 @@
     margin: 0;
 }
 
+.page-footer .link-container {
+    display: block;
+}
+
 a.print-link {
+    display: inline-block;
     width: 32px;
     height: 34px;
-    display: inline-block;
     margin: 5px;
     background-image: url(../images/print_spridesheet_small.png);
 }
@@ -102,6 +118,26 @@ a.email-link:active {
 }
 */
 
+.page-content .teaserbox {
+    border: 1px solid #000;
+    border-radius: 4px;
+    margin: 2px;
+    padding: 5px;
+}
+
+.page-content .teaserbox img {
+    float: left;
+    width: 80px;
+    height: 80px;
+}
+
+.page-content .teaserbox a {
+    display: inline-block;
+    text-decoration: none;
+    color: #000;
+    z-index: 9999;
+}
+
 /* with flex  box */
 @media (min-width: 600px) {
 
@@ -121,4 +157,5 @@ a.email-link:active {
         flex: 1;
         border-top: 0;
     }
+
 }
